[gd_scene load_steps=4 format=3 uid="uid://lwyknoxuwful"]

[ext_resource type="Script" path="res://Scripts/Postits/posit_movible.gd" id="1_bmn8m"]
[ext_resource type="Texture2D" uid="uid://c1m6qto4k2xjg" path="res://Images/etiqueta.png" id="2_5dvuu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rabvl"]

[node name="PositMovible" type="Node2D"]
script = ExtResource("1_bmn8m")

[node name="Button" type="Button" parent="."]
offset_left = -89.0
offset_top = -41.0
offset_right = 89.0
offset_bottom = 45.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_rabvl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_5dvuu")

[node name="Label" type="Label" parent="."]
offset_left = -78.0
offset_top = -18.0
offset_right = 82.0
offset_bottom = 22.0

[node name="TextEdit" type="TextEdit" parent="Label"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="text_changed" from="Label/TextEdit" to="." method="_on_TextEdit_text_changed"]
